POWR-585 fix an error with group content workflow filter

--- a/web/sites/default/config/page_manager.page.taxonomy_term_bureaus.yml
+++ b/web/sites/default/config/page_manager.page.taxonomy_term_bureaus.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: taxonomy_term_bureaus
-label: 'Bureaus'
+label: Bureaus
 description: 'Taxonomy term - bureaus'
 use_admin_theme: false
 path: '/taxonomy/term/{taxonomy_term}/bureaus'
