--- a/web/sites/default/config/page_manager.page.taxonomy_term_guides.yml
+++ b/web/sites/default/config/page_manager.page.taxonomy_term_guides.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: taxonomy_term_guides
-label: 'Guides'
+label: Guides
 description: 'Taxonomy term - guides'
 use_admin_theme: false
 path: '/taxonomy/term/{taxonomy_term}/guides'
