--- a/web/sites/default/config/page_manager.page.taxonomy_term_programs.yml
+++ b/web/sites/default/config/page_manager.page.taxonomy_term_programs.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: taxonomy_term_programs
-label: 'Programs'
+label: Programs
 description: 'Taxonomy term - programs'
 use_admin_theme: false
 path: '/taxonomy/term/{taxonomy_term}/programs'
