--- a/web/sites/default/config/page_manager.page.taxonomy_term_projects.yml
+++ b/web/sites/default/config/page_manager.page.taxonomy_term_projects.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: taxonomy_term_projects
-label: 'Projects'
+label: Projects
 description: 'Taxonomy term - projects'
 use_admin_theme: false
 path: '/taxonomy/term/{taxonomy_term}/projects'
