POWR-585 update text and workflow state field to show latest revision.

--- a/web/sites/default/config/views.view.admin_group_content.yml
+++ b/web/sites/default/config/views.view.admin_group_content.yml
@@ -82,14 +82,21 @@ display:
           summary: ''
           description: ''
           columns:
+            node_bulk_form: node_bulk_form
             title: title
             type: type
-            moderation_state: moderation_state
             status: status
-            field_reviewer: field_reviewer
+            moderation_state_1: moderation_state_1
             revision_uid: revision_uid
             changed: changed
+            field_reviewer: field_reviewer
+            operations: operations
           info:
+            node_bulk_form:
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
             title:
               sortable: true
               default_sort_order: asc
@@ -104,13 +111,6 @@ display:
               separator: ''
               empty_column: false
               responsive: priority-medium
-            moderation_state:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: priority-medium
             status:
               sortable: true
               default_sort_order: asc
@@ -118,7 +118,7 @@ display:
               separator: ''
               empty_column: false
               responsive: priority-medium
-            field_reviewer:
+            moderation_state_1:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -135,6 +135,18 @@ display:
             changed:
               sortable: true
               default_sort_order: desc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_reviewer:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: priority-medium
+            operations:
               align: ''
               separator: ''
               empty_column: false
@@ -397,11 +409,11 @@ display:
           entity_type: node
           entity_field: status
           plugin_id: field
-        moderation_state:
-          id: moderation_state
-          table: node_field_data
+        moderation_state_1:
+          id: moderation_state_1
+          table: node_field_revision
           field: moderation_state
-          relationship: nid
+          relationship: none
           group_type: group
           admin_label: ''
           label: 'Workflow: latest revision'
@@ -926,7 +938,7 @@ display:
           exposed: true
           expose:
             operator_id: moderation_state_op
-            label: 'Moderation state'
+            label: 'Workflow state'
             description: ''
             use_operator: false
             operator: moderation_state_op
