POWR-586 Add layout builder

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -16,20 +16,125 @@ dependencies:
     - field.field.group.bureau_office.field_summary
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
+    - views.view.group_services
   module:
+    - ctools_block
     - ds
+    - layout_builder
+    - layout_discovery
+    - views
 third_party_settings:
-  ds:
-    layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
-      disable_css: false
-      entity_classes: all_classes
-      settings: {  }
-    regions:
-      content:
-        - field_parent_group
-        - field_summary
+  layout_builder:
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          2a6153f9-dbbf-414c-91f0-b18d8f8f3bc9:
+            uuid: 2a6153f9-dbbf-414c-91f0-b18d8f8f3bc9
+            region: content
+            configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              id: 'field_block:group:bureau_office:field_parent_group'
+              formatter:
+                label: inline
+                settings:
+                  link: true
+                third_party_settings:
+                  ds:
+                    ft:
+                      id: default
+                      settings:
+                        lb: 'Part of'
+                        lb-col: false
+                        classes: {  }
+                type: entity_reference_label
+            additional: {  }
+            weight: 0
+          4a739d83-b92e-4cb0-8c5f-4998f22e3b77:
+            uuid: 4a739d83-b92e-4cb0-8c5f-4998f22e3b77
+            region: content
+            configuration:
+              id: 'entity_field:group:type'
+              label: 'Group type'
+              provider: ctools_block
+              label_display: visible
+              formatter:
+                label: above
+                type: entity_reference_label
+                settings:
+                  link: true
+                third_party_settings: {  }
+                weight: 0
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 1
+      -
+        layout_id: layout_twocol
+        layout_settings: {  }
+        components:
+          e1c1c8cf-5067-4a00-bf4d-1cf65c98c18f:
+            uuid: e1c1c8cf-5067-4a00-bf4d-1cf65c98c18f
+            region: first
+            configuration:
+              id: 'entity_field:group:label'
+              label: Title
+              provider: ctools_block
+              label_display: '0'
+              formatter:
+                label: above
+                type: string
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+                weight: 0
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
+          f34d517a-f38b-4a1c-9fc3-c3ac164fa1fb:
+            uuid: f34d517a-f38b-4a1c-9fc3-c3ac164fa1fb
+            region: second
+            configuration:
+              id: 'field_block:group:bureau_office:label'
+              label: Title
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: above
+                type: string
+                settings:
+                  link_to_entity: false
+                third_party_settings:
+                  ds:
+                    ft:
+                      id: default
+                      settings:
+                        lb: ''
+                        lb-col: false
+                        classes: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
+          6db234a7-8379-40cf-a181-e7e493fb3a58:
+            uuid: 6db234a7-8379-40cf-a181-e7e493fb3a58
+            region: bottom
+            configuration:
+              id: 'views_block:group_services-block_1'
+              label: ''
+              provider: views
+              label_display: visible
+              views_label: ''
+              items_per_page: none
+              context_mapping: {  }
+            additional: {  }
+            weight: 0
+    allow_custom: false
+    enabled: true
 id: group.bureau_office.default
 targetEntityType: group
 bundle: bureau_office
