--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -3,6 +3,10 @@ langcode: en
 status: true
 dependencies:
   config:
+    - media.type.audio
+    - media.type.document
+    - media.type.image
+    - media.type.video
     - node.type.alert
     - node.type.building
     - node.type.city_service
@@ -24,7 +28,7 @@ type_settings:
     archived:
       published: false
       default_revision: true
-      label: Unpublished/Archived
+      label: Archived
       weight: 1
     draft:
       label: Draft
@@ -83,6 +87,11 @@ type_settings:
       to: review
       weight: -2
   entity_types:
+    media:
+      - audio
+      - document
+      - image
+      - video
     node:
       - alert
       - building
