--- a/composer.json
+++ b/composer.json
@@ -47,9 +47,9 @@
         "drupal/config_split": "^1.4",
         "drupal/console": "^1.0.2",
         "drupal/copyright_block": "^1.0@RC",
-        "drupal/core": "~8.5",
+        "drupal/core": "^8.6",
         "drupal/custom_add_another": "^1.0@beta",
-        "drupal/ds": "^3.1",
+        "drupal/ds": "3.x-dev",
         "drupal/easy_breadcrumb": "^1.8",
         "drupal/eva": "^1.3",
         "drupal/extlink": "^1.1",
@@ -158,6 +158,9 @@
             },
             "drupal/menu_token": {
                 "2948260 - Tokens not substituted in query string": "https://www.drupal.org/files/issues/2018-09-21/2988939-allow-query-parameters-12.diff"
+            },
+            "drupal/ds": {
+                "2966959 - Value Conflict with Layout Builder": "https://www.drupal.org/files/issues/2018-09-24/2966959-22.patch"
             }
         },
         "merge-plugin": {
