--- a/web/sites/default/config/page_manager.page.taxonomy_term_bureaus.yml
+++ b/web/sites/default/config/page_manager.page.taxonomy_term_bureaus.yml
@@ -3,8 +3,8 @@ langcode: en
 status: true
 dependencies: {  }
 id: taxonomy_term_bureaus
-label: 'Bureaus'
-description: 'Taxonomy term - bureaus'
+label: 'Taxonomy term - bureaus'
+description: ''
 use_admin_theme: false
 path: '/taxonomy/term/{taxonomy_term}/bureaus'
 access_logic: and
