--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -1,6 +1,6 @@
 uuid: 3d09c810-2ff1-4d99-a23a-177ed4304165
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - field.storage.node.field_reviewer
