--- a/web/sites/default/config/views.view.moderated_content.yml
+++ b/web/sites/default/config/views.view.moderated_content.yml
@@ -309,7 +309,7 @@ display:
           relationship: nid
           group_type: group
           admin_label: ''
-          label: Type
+          label: 'Content type'
           exclude: false
           alter:
             alter_text: false
@@ -367,73 +367,6 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: field
-        status:
-          id: status
-          table: node_field_data
-          field: status
-          relationship: nid
-          group_type: group
-          admin_label: ''
-          label: Published
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: boolean
-          settings:
-            format: yes-no
-            format_custom_true: Published
-            format_custom_false: Unpublished
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          entity_type: node
-          entity_field: status
-          plugin_id: field
         moderation_state:
           id: moderation_state
           table: node_field_revision
@@ -441,7 +374,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Workflow: latest revision'
+          label: 'Moderation state'
           exclude: false
           alter:
             alter_text: false
@@ -497,6 +430,122 @@ display:
           field_api_classes: false
           entity_type: node
           plugin_id: field
+        status:
+          id: status
+          table: node_field_data
+          field: status
+          relationship: nid
+          group_type: group
+          admin_label: ''
+          label: 'Publication status'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: boolean
+          settings:
+            format: custom
+            format_custom_true: Published
+            format_custom_false: Unpublished
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: node
+          entity_field: status
+          plugin_id: field
+        changed:
+          id: changed
+          table: node_field_revision
+          field: changed
+          entity_type: node
+          entity_field: changed
+          alter:
+            alter_text: false
+            make_link: false
+            absolute: false
+            trim: false
+            word_boundary: false
+            ellipsis: false
+            strip_tags: false
+            html: false
+          hide_empty: false
+          empty_zero: false
+          plugin_id: field
+          type: timestamp
+          settings:
+            date_format: medium
+            custom_date_format: ''
+            timezone: ''
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Changed
+          exclude: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_alter_empty: true
+          click_sort_column: value
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
         name:
           id: name
           table: users_field_data
@@ -504,8 +553,8 @@ display:
           relationship: revision_uid
           group_type: group
           admin_label: ''
-          label: 'Last updated by'
-          exclude: true
+          label: Editor
+          exclude: false
           alter:
             alter_text: false
             text: ''
@@ -561,73 +610,6 @@ display:
           field_api_classes: false
           entity_type: user
           entity_field: name
-          plugin_id: field
-        changed:
-          id: changed
-          table: node_field_revision
-          field: changed
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: 'Last updated'
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: false
-            ellipsis: false
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: timestamp
-          settings:
-            date_format: medium
-            custom_date_format: ''
-            timezone: ''
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          entity_type: node
-          entity_field: changed
           plugin_id: field
         name_1:
           id: name_1
@@ -758,10 +740,10 @@ display:
           entity_type: node
           entity_field: revision_log
           plugin_id: field
-        operations:
-          id: operations
+        edit_node:
+          id: edit_node
           table: node
-          field: operations
+          field: edit_node
           relationship: nid
           group_type: group
           admin_label: ''
@@ -806,9 +788,11 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          destination: false
+          text: edit
+          output_url_as_text: false
+          absolute: false
           entity_type: node
-          plugin_id: entity_operations
+          plugin_id: entity_link_edit
       filters:
         latest_revision:
           id: latest_revision
@@ -860,13 +844,13 @@ display:
           exposed: true
           expose:
             operator_id: title_op
-            label: 'Title contains'
+            label: Title
             description: ''
             use_operator: false
             operator: title_op
             identifier: title
             required: false
-            remember: false
+            remember: true
             multiple: false
             remember_roles:
               authenticated: authenticated
@@ -902,11 +886,11 @@ display:
           exposed: true
           expose:
             operator_id: label_op
-            label: 'Group (contains)'
+            label: Group
             description: ''
             use_operator: false
             operator: label_op
-            identifier: group
+            identifier: label
             required: false
             remember: false
             multiple: false
@@ -944,13 +928,13 @@ display:
           exposed: true
           expose:
             operator_id: type_op
-            label: Type
+            label: 'Content type'
             description: ''
             use_operator: false
             operator: type_op
             identifier: type
             required: false
-            remember: false
+            remember: true
             multiple: false
             remember_roles:
               authenticated: authenticated
@@ -987,13 +971,13 @@ display:
           exposed: true
           expose:
             operator_id: moderation_state_op
-            label: 'Workflow state'
+            label: 'Moderation state'
             description: ''
             use_operator: false
             operator: moderation_state_op
-            identifier: workflow
+            identifier: moderation_state
             required: false
-            remember: false
+            remember: true
             multiple: false
             remember_roles:
               authenticated: authenticated
@@ -1028,13 +1012,13 @@ display:
           exposed: true
           expose:
             operator_id: uid_op
-            label: 'Last edited by'
+            label: Editor
             description: ''
             use_operator: false
             operator: uid_op
-            identifier: edited_by
+            identifier: uid
             required: false
-            remember: false
+            remember: true
             multiple: false
             remember_roles:
               authenticated: authenticated
@@ -1074,9 +1058,9 @@ display:
             description: ''
             use_operator: false
             operator: uid_1_op
-            identifier: reviewer
+            identifier: uid_1
             required: false
-            remember: false
+            remember: true
             multiple: false
             remember_roles:
               authenticated: authenticated
