POWR-530 removed media browser dialog dimensions to make them responsive

--- a/web/sites/default/config/entity_browser.browser.audio_browser.yml
+++ b/web/sites/default/config/entity_browser.browser.audio_browser.yml
@@ -10,8 +10,8 @@ name: audio_browser
 label: 'Audio browser'
 display: modal
 display_configuration:
-  width: '800'
-  height: '600'
+  width: ''
+  height: ''
   link_text: 'Select audio'
   auto_open: false
 selection_display: no_display
