--- a/web/sites/default/config/entity_browser.browser.document_browser.yml
+++ b/web/sites/default/config/entity_browser.browser.document_browser.yml
@@ -10,8 +10,8 @@ name: document_browser
 label: 'Document browser'
 display: modal
 display_configuration:
-  width: '800'
-  height: '600'
+  width: ''
+  height: ''
   link_text: 'Select document'
   auto_open: false
 selection_display: no_display
