POWR-472 Configuration changes

--- a/web/sites/default/config/cloudy.settings.yml
+++ b/web/sites/default/config/cloudy.settings.yml
@@ -28,7 +28,9 @@ logo:
   use_default: false
   path: themes/custom/cloudy/images/logos/logo-alpha.svg
 favicon:
-  use_default: true
+  use_default: false
+  path: themes/custom/cloudy/favicon.ico
+  mimetype: image/vnd.microsoft.icon
 bootstrap_barrio_sidebar_collapse: 0
 bootstrap_barrio_navbar_top_navbar: 0
 bootstrap_barrio_navbar_top_affix: 0
