--- a/web/sites/default/config/system.theme.global.yml
+++ b/web/sites/default/config/system.theme.global.yml
@@ -1,15 +1,15 @@
 favicon:
   mimetype: image/vnd.microsoft.icon
-  path: profiles/contrib/lightning/favicon.ico
+  path: ''
   url: ''
-  use_default: true
+  use_default: false
 features:
   comment_user_picture: true
   comment_user_verification: true
   favicon: true
   node_user_picture: true
 logo:
-  path: sites/default/files/City-Portland-logotype.png
+  path: ''
   url: ''
   use_default: false
 _core:
