POWR-586 Update group layout

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -16,95 +16,34 @@ dependencies:
     - field.field.group.bureau_office.field_summary
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
+    - views.view.group_events
+    - views.view.group_guides
     - views.view.group_services
   module:
     - ctools_block
     - ds
+    - entity_block
     - layout_builder
+    - layout_builder_restrictions
     - layout_discovery
     - views
 third_party_settings:
   layout_builder:
     sections:
       -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          2a6153f9-dbbf-414c-91f0-b18d8f8f3bc9:
-            uuid: 2a6153f9-dbbf-414c-91f0-b18d8f8f3bc9
-            region: content
-            configuration:
-              label_display: '0'
-              context_mapping:
-                entity: layout_builder.entity
-              id: 'field_block:group:bureau_office:field_parent_group'
-              formatter:
-                label: inline
-                settings:
-                  link: true
-                third_party_settings:
-                  ds:
-                    ft:
-                      id: default
-                      settings:
-                        lb: 'Part of'
-                        lb-col: false
-                        classes: {  }
-                type: entity_reference_label
-            additional: {  }
-            weight: 0
-          4a739d83-b92e-4cb0-8c5f-4998f22e3b77:
-            uuid: 4a739d83-b92e-4cb0-8c5f-4998f22e3b77
-            region: content
-            configuration:
-              id: 'entity_field:group:type'
-              label: 'Group type'
-              provider: ctools_block
-              label_display: visible
-              formatter:
-                label: above
-                type: entity_reference_label
-                settings:
-                  link: true
-                third_party_settings: {  }
-                weight: 0
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 1
-      -
         layout_id: layout_twocol
         layout_settings: {  }
         components:
-          e1c1c8cf-5067-4a00-bf4d-1cf65c98c18f:
-            uuid: e1c1c8cf-5067-4a00-bf4d-1cf65c98c18f
-            region: first
-            configuration:
-              id: 'entity_field:group:label'
-              label: Title
-              provider: ctools_block
-              label_display: '0'
-              formatter:
-                label: above
-                type: string
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-                weight: 0
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
-          f34d517a-f38b-4a1c-9fc3-c3ac164fa1fb:
-            uuid: f34d517a-f38b-4a1c-9fc3-c3ac164fa1fb
-            region: second
+          70b0b35b-734a-4b64-9702-55d4d85174ea:
+            uuid: 70b0b35b-734a-4b64-9702-55d4d85174ea
+            region: top
             configuration:
               id: 'field_block:group:bureau_office:label'
               label: Title
               provider: layout_builder
               label_display: '0'
               formatter:
-                label: above
+                label: hidden
                 type: string
                 settings:
                   link_to_entity: false
@@ -120,21 +59,199 @@ third_party_settings:
                 entity: layout_builder.entity
             additional: {  }
             weight: 0
-          6db234a7-8379-40cf-a181-e7e493fb3a58:
-            uuid: 6db234a7-8379-40cf-a181-e7e493fb3a58
+          7fac7d93-a489-464d-a91e-b32156b0d882:
+            uuid: 7fac7d93-a489-464d-a91e-b32156b0d882
+            region: top
+            configuration:
+              id: 'entity_field:group:field_summary'
+              label: Summary
+              provider: ctools_block
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: string
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+                weight: 0
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 1
+          8881bab4-fc9c-4b46-9892-107f7baa3b90:
+            uuid: 8881bab4-fc9c-4b46-9892-107f7baa3b90
+            region: first
+            configuration:
+              id: 'entity_field:group:field_phone'
+              label: Phone
+              provider: ctools_block
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: string
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+                weight: 0
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
+          e3fac67f-2ab7-4409-bec1-ee74f186d485:
+            uuid: e3fac67f-2ab7-4409-bec1-ee74f186d485
+            region: first
+            configuration:
+              id: 'field_block:group:bureau_office:field_email'
+              label: Email
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: email_mailto
+                settings: {  }
+                third_party_settings:
+                  ds:
+                    ft:
+                      id: default
+                      settings:
+                        lb: ''
+                        lb-col: false
+                        classes: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 1
+          77d7aea5-ff19-44d5-8ffe-f9e6c34a6393:
+            uuid: 77d7aea5-ff19-44d5-8ffe-f9e6c34a6393
+            region: second
+            configuration:
+              id: 'field_block:group:bureau_office:field_address'
+              label: Address
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: address_default
+                settings: {  }
+                third_party_settings:
+                  ds:
+                    ft:
+                      id: default
+                      settings:
+                        lb: ''
+                        lb-col: false
+                        classes: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
+          612f4799-3bc7-4c6d-8aa5-76bb3b8ce363:
+            uuid: 612f4799-3bc7-4c6d-8aa5-76bb3b8ce363
             region: bottom
             configuration:
-              id: 'views_block:group_services-block_1'
-              label: ''
+              id: 'entity_block:media'
+              label: Media
+              provider: entity_block
+              label_display: ''
+              entity: '110'
+              view_mode: default
+              context_mapping: {  }
+            additional: {  }
+            weight: 0
+      -
+        layout_id: layout_threecol_33_34_33
+        layout_settings: {  }
+        components:
+          6761533e-d1ae-4a18-9a94-8d1a76a29d34:
+            uuid: 6761533e-d1ae-4a18-9a94-8d1a76a29d34
+            region: first
+            configuration:
+              id: 'views_block:group_guides-block_1'
+              label: Guides
               provider: views
               label_display: visible
-              views_label: ''
+              views_label: Guides
               items_per_page: none
+              context_mapping: {  }
+            additional: {  }
+            weight: 0
+          a650d6a2-0b4e-4b41-9305-9cb688ae1c75:
+            uuid: a650d6a2-0b4e-4b41-9305-9cb688ae1c75
+            region: second
+            configuration:
+              id: 'views_block:group_services-block_1'
+              label: Services
+              provider: views
+              label_display: visible
+              views_label: Services
+              items_per_page: '10'
+              context_mapping: {  }
+            additional: {  }
+            weight: 0
+          0bdce195-b46d-4863-bcb1-ed08760f80de:
+            uuid: 0bdce195-b46d-4863-bcb1-ed08760f80de
+            region: third
+            configuration:
+              id: 'views_block:group_events-block_1'
+              label: Events
+              provider: views
+              label_display: visible
+              views_label: Events
+              items_per_page: '10'
               context_mapping: {  }
             additional: {  }
             weight: 0
     allow_custom: false
     enabled: true
+  layout_builder_restrictions:
+    allowed_blocks:
+      'Chaos tools': {  }
+      'Copyright Block': {  }
+      core:
+        - page_title_block
+      Custom: {  }
+      'Entity Block':
+        - 'entity_block:node'
+        - 'entity_block:media'
+      Facets: {  }
+      Forms: {  }
+      Group:
+        - 'field_block:group:bureau_office:field_address'
+        - 'entity_field:group:field_audience'
+        - 'entity_field:group:field_building'
+        - 'entity_field:group:field_bureaus'
+        - 'field_block:group:bureau_office:changed'
+        - 'field_block:group:bureau_office:created'
+        - 'field_block:group:bureau_office:field_email'
+        - 'field_block:group:bureau_office:type'
+        - 'entity_field:group:field_logo'
+        - 'entity_field:group:field_official_organization_name'
+        - 'entity_field:group:field_official_title'
+        - 'entity_field:group:field_parent_group'
+        - 'entity_field:group:field_phone'
+        - 'field_block:group:bureau_office:field_shortname_or_acronym'
+        - 'entity_field:group:field_summary'
+        - 'field_block:group:bureau_office:label'
+        - 'field_block:group:bureau_office:field_topics'
+      Help: {  }
+      'Lists (Views)':
+        - 'views_block:group_programs-block_1'
+        - 'views_block:group_projects-block_1'
+        - 'views_block:group_banner-block_1'
+        - 'views_block:group_events-block_1'
+        - 'views_block:group_guides-block_1'
+        - 'views_block:group_menu-block_1'
+        - 'views_block:group_content_menu-block_1'
+        - 'views_block:group_menu_for_media-block_1'
+        - 'views_block:group_news-block_1'
+        - 'views_block:group_notifications_block-block_1'
+        - 'views_block:groups_by_audience-block_1'
+        - 'views_block:group_services-block_1'
+      Menus: {  }
+      'Moderation Dashboard': {  }
+      'OpenID Connect': {  }
+      User: {  }
+    allowed_layouts: {  }
 id: group.bureau_office.default
 targetEntityType: group
 bundle: bureau_office
