--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -69,6 +69,7 @@ module:
   inline_form_errors: 0
   jsonapi: 0
   layout_builder: 0
+  layout_builder_restrictions: 0
   layout_discovery: 0
   lightning_api: 0
   lightning_contact_form: 0
