--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -172,3 +172,4 @@ csv_serialization: 1.4.0
 views_data_export: 1.0.0-beta1
 switch_page_theme: 1.0.0
 layout_builder: 8.x-dev
+layout_builder_restrictions: 1.2.0
