--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
         "drupal/hsts": "^1.0",
         "drupal/htmlpurifier": "^1.0@RC",
         "drupal/inline_entity_form": "^1.0@RC",
+        "drupal/layout_builder_restrictions": "^1.2",
         "drupal/link_class": "^1.3",
         "drupal/linkit": "^4.3",
         "drupal/maxlength": "^1.0",
