--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ Thumbs.db
 ##########
 .sass-cache
 web/themes/custom/**/*.map
+web/themes/custom/cloudy/css/style.css
 
 # Things in the core directory that Drupal 8 commits in the repository.
 !web/core/**/*.gz
