POWR-556 - Add views exposed form labels, then make them invisible on services and bureaus search fields.

--- a/web/sites/default/config/views.view.bureaus_and_offices.yml
+++ b/web/sites/default/config/views.view.bureaus_and_offices.yml
@@ -169,7 +169,7 @@ display:
           exposed: true
           expose:
             operator_id: search_api_fulltext_op
-            label: ''
+            label: 'Search bureaus and offices'
             description: ''
             use_operator: false
             operator: search_api_fulltext_op
