--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -165,7 +165,7 @@ display:
           exposed: true
           expose:
             operator_id: search_api_fulltext_op
-            label: ''
+            label: 'Search city services'
             description: ''
             use_operator: false
             operator: search_api_fulltext_op
@@ -177,9 +177,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
-              layout_manager: '0'
-              media_creator: '0'
-              media_manager: '0'
+              sitewide_editor: '0'
             placeholder: ''
           is_grouped: false
           group_info:
