--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -36,6 +36,7 @@ permissions:
   - 'use editorial transition create_new_draft'
   - 'use editorial transition publish'
   - 'use editorial transition review'
+  - 'use editorial transition send_to_review'
   - 'use text format simple_editor'
   - 'view all media revisions'
   - 'view all revisions'
