POWR-620 - initial commit of config changes: added new Body Content field, added new text format with media embed

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -38,6 +38,7 @@ permissions:
   - 'use editorial transition review'
   - 'use editorial transition send_to_review'
   - 'use text format simple_editor'
+  - 'use text format simplified_editor_with_media_embed'
   - 'view all media revisions'
   - 'view all revisions'
   - 'view any unpublished content'
