--- a/web/sites/default/config/core.entity_form_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.guide.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.guide.field_body
+    - field.field.node.guide.field_body_content
     - field.field.node.guide.field_legacy_path
     - field.field.node.guide.field_related_content
     - field.field.node.guide.field_reviewer
@@ -15,6 +16,7 @@ dependencies:
     - content_moderation
     - paragraphs
     - path
+    - text
 id: node.guide.default
 targetEntityType: node
 bundle: guide
@@ -41,11 +43,20 @@ content:
         duplicate: duplicate
         collapse_edit_all: collapse_edit_all
         add_above: '0'
+      closed_mode_threshold: 0
     third_party_settings: {  }
     type: paragraphs
     region: content
+  field_body_content:
+    weight: 3
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
   field_legacy_path:
-    weight: 26
+    weight: 12
     settings:
       size: 60
       placeholder: ''
@@ -62,7 +73,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 27
+    weight: 13
     settings:
       match_operator: CONTAINS
       size: 60
@@ -71,7 +82,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_summary:
-    weight: 3
+    weight: 2
     settings:
       rows: 2
       placeholder: ''
