--- a/web/sites/default/config/core.entity_view_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.guide.field_body
+    - field.field.node.guide.field_body_content
     - field.field.node.guide.field_legacy_path
     - field.field.node.guide.field_related_content
     - field.field.node.guide.field_reviewer
@@ -12,8 +13,8 @@ dependencies:
     - node.type.guide
   module:
     - ds
-    - entity_reference_revisions
     - panelizer
+    - text
     - user
 third_party_settings:
   panelizer:
@@ -32,7 +33,7 @@ third_party_settings:
       content:
         - content_moderation_control
         - field_summary
-        - field_body
+        - field_body_content
 id: node.guide.default
 targetEntityType: node
 bundle: guide
@@ -43,22 +44,12 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_body:
+  field_body_content:
     weight: 2
     label: hidden
-    settings:
-      view_mode: default
-      link: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
-    region: content
-  field_reviewer:
-    weight: 3
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+    type: text_default
     region: content
   field_summary:
     weight: 1
@@ -97,7 +88,9 @@ content:
     type: string
     region: content
 hidden:
+  field_body: true
   field_legacy_path: true
   field_related_content: true
+  field_reviewer: true
   field_topics: true
   links: true
