POWR-398 Make group permissions consistent across all group types

--- a/web/sites/default/config/group.role.project-admin.yml
+++ b/web/sites/default/config/group.role.project-admin.yml
@@ -12,98 +12,96 @@ audience: member
 group_type: project
 permissions_ui: true
 permissions:
-  0: 'access content overview'
-  1: 'administer group'
-  2: 'delete group'
-  3: 'edit group'
-  4: 'view group'
-  5: 'administer members'
-  6: 'update own group_membership content'
-  7: 'leave group'
-  8: 'view group_membership content'
-  9: 'access group_node overview'
-  10: 'create group_node:news entity'
-  11: 'delete any group_node:news entity'
-  12: 'delete own group_node:news entity'
-  13: 'update any group_node:news entity'
-  14: 'update own group_node:news entity'
-  15: 'view group_node:news entity'
-  16: 'view unpublished group_node:news entity'
-  17: 'create group_node:news content'
-  18: 'view group_node:news content'
-  19: 'create group_node:city_service entity'
-  20: 'delete any group_node:city_service entity'
-  21: 'delete own group_node:city_service entity'
-  22: 'update any group_node:city_service entity'
-  23: 'update own group_node:city_service entity'
-  24: 'view group_node:city_service entity'
-  25: 'view unpublished group_node:city_service entity'
-  26: 'create group_node:city_service content'
-  27: 'view group_node:city_service content'
-  28: 'create group_node:guide entity'
-  29: 'delete any group_node:guide entity'
-  30: 'delete own group_node:guide entity'
-  31: 'update any group_node:guide entity'
-  32: 'update own group_node:guide entity'
-  33: 'view group_node:guide entity'
-  34: 'view unpublished group_node:guide entity'
-  35: 'create group_node:guide content'
-  36: 'view group_node:guide content'
-  37: 'create group_node:information entity'
-  38: 'delete any group_node:information entity'
-  39: 'delete own group_node:information entity'
-  40: 'update any group_node:information entity'
-  41: 'update own group_node:information entity'
-  42: 'view group_node:information entity'
-  43: 'view unpublished group_node:information entity'
-  44: 'create group_node:information content'
-  45: 'view group_node:information content'
-  46: 'create group_node:event entity'
-  47: 'delete any group_node:event entity'
-  48: 'delete own group_node:event entity'
-  49: 'update any group_node:event entity'
-  50: 'update own group_node:event entity'
-  51: 'view group_node:event entity'
-  52: 'view unpublished group_node:event entity'
-  53: 'create group_node:event content'
-  54: 'view group_node:event content'
-  55: 'create group_node:notification entity'
-  56: 'delete any group_node:notification entity'
-  57: 'delete own group_node:notification entity'
-  58: 'update any group_node:notification entity'
-  59: 'update own group_node:notification entity'
-  60: 'view group_node:notification entity'
-  61: 'view unpublished group_node:notification entity'
-  62: 'create group_node:notification content'
-  63: 'view group_node:notification content'
-  73: 'create group_media:audio entity'
-  74: 'delete any group_media:audio entity'
-  75: 'delete own group_media:audio entity'
-  76: 'update any group_media:audio entity'
-  77: 'update own group_media:audio entity'
-  78: 'view group_media:audio entity'
-  79: 'view unpublished group_media:audio entity'
-  80: 'create group_media:audio content'
-  81: 'create group_media:document entity'
-  82: 'delete any group_media:document entity'
-  83: 'delete own group_media:document entity'
-  84: 'update any group_media:document entity'
-  85: 'update own group_media:document entity'
-  86: 'view group_media:document entity'
-  87: 'view unpublished group_media:document entity'
-  88: 'create group_media:document content'
-  89: 'create group_media:image entity'
-  90: 'delete any group_media:image entity'
-  91: 'delete own group_media:image entity'
-  92: 'update any group_media:image entity'
-  93: 'update own group_media:image entity'
-  94: 'view group_media:image entity'
-  95: 'view unpublished group_media:image entity'
-  96: 'create group_media:video entity'
-  97: 'delete any group_media:video entity'
-  98: 'delete own group_media:video entity'
-  99: 'update any group_media:video entity'
-  100: 'update own group_media:video entity'
-  101: 'view group_media:video entity'
-  102: 'view unpublished group_media:video entity'
-  103: 'create group_media:video content'
+  - 'edit group'
+  - 'view group'
+  - 'administer members'
+  - 'update own group_membership content'
+  - 'leave group'
+  - 'view group_membership content'
+  - 'access group_node overview'
+  - 'delete any group_node:news entity'
+  - 'delete own group_node:news entity'
+  - 'update any group_node:news entity'
+  - 'update own group_node:news entity'
+  - 'view group_node:news entity'
+  - 'view unpublished group_node:news entity'
+  - 'create group_node:news content'
+  - 'view group_node:news content'
+  - 'create group_node:city_service entity'
+  - 'delete any group_node:city_service entity'
+  - 'delete own group_node:city_service entity'
+  - 'update any group_node:city_service entity'
+  - 'update own group_node:city_service entity'
+  - 'view group_node:city_service entity'
+  - 'view unpublished group_node:city_service entity'
+  - 'create group_node:city_service content'
+  - 'view group_node:city_service content'
+  - 'delete any group_node:guide entity'
+  - 'delete own group_node:guide entity'
+  - 'update any group_node:guide entity'
+  - 'update own group_node:guide entity'
+  - 'view group_node:guide entity'
+  - 'view unpublished group_node:guide entity'
+  - 'create group_node:guide content'
+  - 'view group_node:guide content'
+  - 'delete any group_node:information entity'
+  - 'delete own group_node:information entity'
+  - 'update any group_node:information entity'
+  - 'update own group_node:information entity'
+  - 'view group_node:information entity'
+  - 'view unpublished group_node:information entity'
+  - 'create group_node:information content'
+  - 'view group_node:information content'
+  - 'delete any group_node:event entity'
+  - 'delete own group_node:event entity'
+  - 'update any group_node:event entity'
+  - 'update own group_node:event entity'
+  - 'view group_node:event entity'
+  - 'view unpublished group_node:event entity'
+  - 'create group_node:event content'
+  - 'view group_node:event content'
+  - 'create group_node:notification entity'
+  - 'delete any group_node:notification entity'
+  - 'delete own group_node:notification entity'
+  - 'update any group_node:notification entity'
+  - 'update own group_node:notification entity'
+  - 'view group_node:notification entity'
+  - 'view unpublished group_node:notification entity'
+  - 'create group_node:notification content'
+  - 'view group_node:notification content'
+  - 'create group_media:audio entity'
+  - 'delete any group_media:audio entity'
+  - 'delete own group_media:audio entity'
+  - 'update any group_media:audio entity'
+  - 'update own group_media:audio entity'
+  - 'view group_media:audio entity'
+  - 'view unpublished group_media:audio entity'
+  - 'create group_media:audio content'
+  - 'create group_media:document entity'
+  - 'delete any group_media:document entity'
+  - 'delete own group_media:document entity'
+  - 'update any group_media:document entity'
+  - 'update own group_media:document entity'
+  - 'view group_media:document entity'
+  - 'view unpublished group_media:document entity'
+  - 'create group_media:document content'
+  - 'create group_media:image entity'
+  - 'delete any group_media:image entity'
+  - 'delete own group_media:image entity'
+  - 'update any group_media:image entity'
+  - 'update own group_media:image entity'
+  - 'view group_media:image entity'
+  - 'view unpublished group_media:image entity'
+  - 'create group_media:video entity'
+  - 'delete any group_media:video entity'
+  - 'delete own group_media:video entity'
+  - 'update any group_media:video entity'
+  - 'update own group_media:video entity'
+  - 'view group_media:video entity'
+  - 'view unpublished group_media:video entity'
+  - 'create group_media:video content'
+  - 'access group_media overview'
+  - 'view group_media:document content'
+  - 'create group_media:image content'
+  - 'view group_media:image content'
+  - 'view group_media:video content'
