--- a/web/sites/default/config/group.role.elected_official-admin.yml
+++ b/web/sites/default/config/group.role.elected_official-admin.yml
@@ -12,58 +12,87 @@ audience: member
 group_type: elected_official
 permissions_ui: true
 permissions:
-  0: 'access content overview'
-  1: 'administer group'
-  2: 'delete group'
-  3: 'edit group'
-  4: 'view group'
-  5: 'administer members'
-  6: 'update own group_membership content'
-  7: 'leave group'
-  8: 'view group_membership content'
-  9: 'access group_node overview'
-  10: 'create group_node:news entity'
-  11: 'delete any group_node:news entity'
-  12: 'delete own group_node:news entity'
-  13: 'update any group_node:news entity'
-  14: 'update own group_node:news entity'
-  15: 'view group_node:news entity'
-  16: 'view unpublished group_node:news entity'
-  17: 'create group_node:news content'
-  18: 'view group_node:news content'
-  19: 'create group_node:guide entity'
-  20: 'delete any group_node:guide entity'
-  21: 'delete own group_node:guide entity'
-  22: 'update any group_node:guide entity'
-  23: 'update own group_node:guide entity'
-  24: 'view group_node:guide entity'
-  25: 'view unpublished group_node:guide entity'
-  26: 'create group_node:guide content'
-  27: 'view group_node:guide content'
-  28: 'create group_node:information entity'
-  29: 'delete any group_node:information entity'
-  30: 'delete own group_node:information entity'
-  31: 'update any group_node:information entity'
-  32: 'update own group_node:information entity'
-  33: 'view group_node:information entity'
-  34: 'view unpublished group_node:information entity'
-  35: 'create group_node:information content'
-  36: 'view group_node:information content'
-  37: 'create group_node:event entity'
-  38: 'delete any group_node:event entity'
-  39: 'delete own group_node:event entity'
-  40: 'update any group_node:event entity'
-  41: 'update own group_node:event entity'
-  42: 'view group_node:event entity'
-  43: 'view unpublished group_node:event entity'
-  44: 'create group_node:event content'
-  45: 'view group_node:event content'
-  92: 'create group_node:notification entity'
-  93: 'delete any group_node:notification entity'
-  94: 'delete own group_node:notification entity'
-  95: 'update any group_node:notification entity'
-  96: 'update own group_node:notification entity'
-  97: 'view group_node:notification entity'
-  98: 'view unpublished group_node:notification entity'
-  99: 'create group_node:notification content'
-  100: 'view group_node:notification content'
+  - 'edit group'
+  - 'view group'
+  - 'administer members'
+  - 'update own group_membership content'
+  - 'leave group'
+  - 'view group_membership content'
+  - 'access group_node overview'
+  - 'delete any group_node:news entity'
+  - 'delete own group_node:news entity'
+  - 'update any group_node:news entity'
+  - 'update own group_node:news entity'
+  - 'view group_node:news entity'
+  - 'view unpublished group_node:news entity'
+  - 'create group_node:news content'
+  - 'view group_node:news content'
+  - 'delete any group_node:guide entity'
+  - 'delete own group_node:guide entity'
+  - 'update any group_node:guide entity'
+  - 'update own group_node:guide entity'
+  - 'view group_node:guide entity'
+  - 'view unpublished group_node:guide entity'
+  - 'create group_node:guide content'
+  - 'view group_node:guide content'
+  - 'delete any group_node:information entity'
+  - 'delete own group_node:information entity'
+  - 'update any group_node:information entity'
+  - 'update own group_node:information entity'
+  - 'view group_node:information entity'
+  - 'view unpublished group_node:information entity'
+  - 'create group_node:information content'
+  - 'view group_node:information content'
+  - 'delete any group_node:event entity'
+  - 'delete own group_node:event entity'
+  - 'update any group_node:event entity'
+  - 'update own group_node:event entity'
+  - 'view group_node:event entity'
+  - 'view unpublished group_node:event entity'
+  - 'create group_node:event content'
+  - 'view group_node:event content'
+  - 'create group_node:notification entity'
+  - 'delete any group_node:notification entity'
+  - 'delete own group_node:notification entity'
+  - 'update any group_node:notification entity'
+  - 'update own group_node:notification entity'
+  - 'view group_node:notification entity'
+  - 'view unpublished group_node:notification entity'
+  - 'create group_node:notification content'
+  - 'view group_node:notification content'
+  - 'access group_media overview'
+  - 'create group_media:audio entity'
+  - 'delete any group_media:audio entity'
+  - 'delete own group_media:audio entity'
+  - 'update any group_media:audio entity'
+  - 'update own group_media:audio entity'
+  - 'view group_media:audio entity'
+  - 'view unpublished group_media:audio entity'
+  - 'create group_media:audio content'
+  - 'create group_media:document entity'
+  - 'delete any group_media:document entity'
+  - 'delete own group_media:document entity'
+  - 'update any group_media:document entity'
+  - 'update own group_media:document entity'
+  - 'view group_media:document entity'
+  - 'view unpublished group_media:document entity'
+  - 'create group_media:document content'
+  - 'view group_media:document content'
+  - 'create group_media:image entity'
+  - 'delete any group_media:image entity'
+  - 'delete own group_media:image entity'
+  - 'update any group_media:image entity'
+  - 'update own group_media:image entity'
+  - 'view group_media:image entity'
+  - 'view unpublished group_media:image entity'
+  - 'create group_media:image content'
+  - 'view group_media:image content'
+  - 'create group_media:video entity'
+  - 'delete any group_media:video entity'
+  - 'delete own group_media:video entity'
+  - 'update any group_media:video entity'
+  - 'update own group_media:video entity'
+  - 'view group_media:video entity'
+  - 'view unpublished group_media:video entity'
+  - 'create group_media:video content'
+  - 'view group_media:video content'
