--- a/web/sites/default/config/group.role.elected_official-outsider.yml
+++ b/web/sites/default/config/group.role.elected_official-outsider.yml
@@ -12,9 +12,13 @@ audience: outsider
 group_type: elected_official
 permissions_ui: true
 permissions:
-  0: 'view group'
-  1: 'view group_node:news entity'
-  2: 'view group_node:guide entity'
-  3: 'view group_node:information entity'
-  4: 'view group_node:event entity'
-  10: 'view group_node:notification entity'
+  - 'view group'
+  - 'view group_node:news entity'
+  - 'view group_node:guide entity'
+  - 'view group_node:information entity'
+  - 'view group_node:event entity'
+  - 'view group_node:notification entity'
+  - 'view group_media:audio entity'
+  - 'view group_media:document entity'
+  - 'view group_media:image entity'
+  - 'view group_media:video entity'
