--- a/web/sites/default/config/group.role.program-admin.yml
+++ b/web/sites/default/config/group.role.program-admin.yml
@@ -12,64 +12,96 @@ audience: member
 group_type: program
 permissions_ui: true
 permissions:
-  0: 'edit group'
-  1: 'view group'
-  2: 'administer members'
-  3: 'update own group_membership content'
-  4: 'leave group'
-  5: 'view group_membership content'
-  6: 'access group_node overview'
-  7: 'create group_node:city_service entity'
-  8: 'delete any group_node:city_service entity'
-  9: 'delete own group_node:city_service entity'
-  10: 'update any group_node:city_service entity'
-  11: 'update own group_node:city_service entity'
-  12: 'view group_node:city_service entity'
-  13: 'view unpublished group_node:city_service entity'
-  14: 'create group_node:city_service content'
-  15: 'view group_node:city_service content'
-  16: 'create group_node:news entity'
-  17: 'delete any group_node:news entity'
-  18: 'delete own group_node:news entity'
-  19: 'update any group_node:news entity'
-  20: 'update own group_node:news entity'
-  21: 'view group_node:news entity'
-  22: 'view unpublished group_node:news entity'
-  23: 'create group_node:news content'
-  24: 'view group_node:news content'
-  25: 'create group_node:guide entity'
-  26: 'delete any group_node:guide entity'
-  27: 'delete own group_node:guide entity'
-  28: 'update any group_node:guide entity'
-  29: 'update own group_node:guide entity'
-  30: 'view group_node:guide entity'
-  31: 'view unpublished group_node:guide entity'
-  32: 'create group_node:guide content'
-  33: 'view group_node:guide content'
-  34: 'create group_node:information entity'
-  35: 'delete any group_node:information entity'
-  36: 'delete own group_node:information entity'
-  37: 'update any group_node:information entity'
-  38: 'update own group_node:information entity'
-  39: 'view group_node:information entity'
-  40: 'view unpublished group_node:information entity'
-  41: 'create group_node:information content'
-  42: 'view group_node:information content'
-  43: 'create group_node:event entity'
-  44: 'delete any group_node:event entity'
-  45: 'delete own group_node:event entity'
-  46: 'update any group_node:event entity'
-  47: 'update own group_node:event entity'
-  48: 'view group_node:event entity'
-  49: 'view unpublished group_node:event entity'
-  50: 'create group_node:event content'
-  51: 'view group_node:event content'
-  95: 'create group_node:notification entity'
-  96: 'delete any group_node:notification entity'
-  97: 'delete own group_node:notification entity'
-  98: 'update any group_node:notification entity'
-  99: 'update own group_node:notification entity'
-  100: 'view group_node:notification entity'
-  101: 'view unpublished group_node:notification entity'
-  102: 'create group_node:notification content'
-  103: 'view group_node:notification content'
+  - 'edit group'
+  - 'view group'
+  - 'administer members'
+  - 'update own group_membership content'
+  - 'leave group'
+  - 'view group_membership content'
+  - 'access group_node overview'
+  - 'create group_node:city_service entity'
+  - 'delete any group_node:city_service entity'
+  - 'delete own group_node:city_service entity'
+  - 'update any group_node:city_service entity'
+  - 'update own group_node:city_service entity'
+  - 'view group_node:city_service entity'
+  - 'view unpublished group_node:city_service entity'
+  - 'create group_node:city_service content'
+  - 'view group_node:city_service content'
+  - 'delete any group_node:news entity'
+  - 'delete own group_node:news entity'
+  - 'update any group_node:news entity'
+  - 'update own group_node:news entity'
+  - 'view group_node:news entity'
+  - 'view unpublished group_node:news entity'
+  - 'create group_node:news content'
+  - 'view group_node:news content'
+  - 'delete any group_node:guide entity'
+  - 'delete own group_node:guide entity'
+  - 'update any group_node:guide entity'
+  - 'update own group_node:guide entity'
+  - 'view group_node:guide entity'
+  - 'view unpublished group_node:guide entity'
+  - 'create group_node:guide content'
+  - 'view group_node:guide content'
+  - 'delete any group_node:information entity'
+  - 'delete own group_node:information entity'
+  - 'update any group_node:information entity'
+  - 'update own group_node:information entity'
+  - 'view group_node:information entity'
+  - 'view unpublished group_node:information entity'
+  - 'create group_node:information content'
+  - 'view group_node:information content'
+  - 'delete any group_node:event entity'
+  - 'delete own group_node:event entity'
+  - 'update any group_node:event entity'
+  - 'update own group_node:event entity'
+  - 'view group_node:event entity'
+  - 'view unpublished group_node:event entity'
+  - 'create group_node:event content'
+  - 'view group_node:event content'
+  - 'create group_node:notification entity'
+  - 'delete any group_node:notification entity'
+  - 'delete own group_node:notification entity'
+  - 'update any group_node:notification entity'
+  - 'update own group_node:notification entity'
+  - 'view group_node:notification entity'
+  - 'view unpublished group_node:notification entity'
+  - 'create group_node:notification content'
+  - 'view group_node:notification content'
+  - 'access group_media overview'
+  - 'create group_media:audio entity'
+  - 'delete any group_media:audio entity'
+  - 'delete own group_media:audio entity'
+  - 'update any group_media:audio entity'
+  - 'update own group_media:audio entity'
+  - 'view group_media:audio entity'
+  - 'view unpublished group_media:audio entity'
+  - 'create group_media:audio content'
+  - 'create group_media:document entity'
+  - 'delete any group_media:document entity'
+  - 'delete own group_media:document entity'
+  - 'update any group_media:document entity'
+  - 'update own group_media:document entity'
+  - 'view group_media:document entity'
+  - 'view unpublished group_media:document entity'
+  - 'create group_media:document content'
+  - 'view group_media:document content'
+  - 'create group_media:image entity'
+  - 'delete any group_media:image entity'
+  - 'delete own group_media:image entity'
+  - 'update any group_media:image entity'
+  - 'update own group_media:image entity'
+  - 'view group_media:image entity'
+  - 'view unpublished group_media:image entity'
+  - 'create group_media:image content'
+  - 'view group_media:image content'
+  - 'create group_media:video entity'
+  - 'delete any group_media:video entity'
+  - 'delete own group_media:video entity'
+  - 'update any group_media:video entity'
+  - 'update own group_media:video entity'
+  - 'view group_media:video entity'
+  - 'view unpublished group_media:video entity'
+  - 'create group_media:video content'
+  - 'view group_media:video content'
