--- a/web/sites/default/config/group.role.program-anonymous.yml
+++ b/web/sites/default/config/group.role.program-anonymous.yml
@@ -12,9 +12,14 @@ audience: anonymous
 group_type: program
 permissions_ui: true
 permissions:
-  0: 'view group'
-  1: 'view group_node:city_service entity'
-  2: 'view group_node:news entity'
-  3: 'view group_node:information entity'
-  4: 'view group_node:event entity'
-  9: 'view group_node:notification entity'
+  - 'view group'
+  - 'view group_node:city_service entity'
+  - 'view group_node:news entity'
+  - 'view group_node:information entity'
+  - 'view group_node:event entity'
+  - 'view group_node:notification entity'
+  - 'view group_media:audio entity'
+  - 'view group_media:document entity'
+  - 'view group_media:image entity'
+  - 'view group_media:video entity'
+  - 'view group_node:guide entity'
