--- a/web/sites/default/config/group.role.program-member.yml
+++ b/web/sites/default/config/group.role.program-member.yml
@@ -21,39 +21,54 @@ permissions:
   6: 'update own group_node:city_service entity'
   7: 'view group_node:city_service entity'
   8: 'view unpublished group_node:city_service entity'
-  9: 'delete any group_node:city_service entity'
-  10: 'create group_node:news entity'
-  11: 'delete any group_node:news entity'
-  12: 'delete own group_node:news entity'
-  13: 'update any group_node:news entity'
-  14: 'update own group_node:news entity'
-  15: 'view group_node:news entity'
-  16: 'view unpublished group_node:news entity'
-  17: 'create group_node:guide entity'
-  18: 'delete any group_node:guide entity'
-  19: 'delete own group_node:guide entity'
-  20: 'update any group_node:guide entity'
-  21: 'update own group_node:guide entity'
-  22: 'view group_node:guide entity'
-  23: 'view unpublished group_node:guide entity'
-  24: 'create group_node:information entity'
-  25: 'delete any group_node:information entity'
-  26: 'delete own group_node:information entity'
-  27: 'update any group_node:information entity'
-  28: 'update own group_node:information entity'
-  29: 'view group_node:information entity'
-  30: 'view unpublished group_node:information entity'
-  31: 'create group_node:event entity'
-  32: 'delete any group_node:event entity'
-  33: 'delete own group_node:event entity'
-  34: 'update any group_node:event entity'
-  35: 'update own group_node:event entity'
-  36: 'view group_node:event entity'
-  37: 'view unpublished group_node:event entity'
-  69: 'create group_node:notification entity'
-  70: 'delete any group_node:notification entity'
-  71: 'delete own group_node:notification entity'
-  72: 'update any group_node:notification entity'
-  73: 'update own group_node:notification entity'
-  74: 'view group_node:notification entity'
-  75: 'view unpublished group_node:notification entity'
+  11: 'delete own group_node:news entity'
+  12: 'update any group_node:news entity'
+  13: 'update own group_node:news entity'
+  14: 'view group_node:news entity'
+  15: 'view unpublished group_node:news entity'
+  17: 'delete own group_node:guide entity'
+  18: 'update any group_node:guide entity'
+  19: 'update own group_node:guide entity'
+  20: 'view group_node:guide entity'
+  21: 'view unpublished group_node:guide entity'
+  23: 'delete own group_node:information entity'
+  24: 'update any group_node:information entity'
+  25: 'update own group_node:information entity'
+  26: 'view group_node:information entity'
+  27: 'view unpublished group_node:information entity'
+  29: 'delete own group_node:event entity'
+  30: 'update any group_node:event entity'
+  31: 'update own group_node:event entity'
+  32: 'view group_node:event entity'
+  33: 'view unpublished group_node:event entity'
+  34: 'create group_node:notification entity'
+  36: 'delete own group_node:notification entity'
+  37: 'update any group_node:notification entity'
+  38: 'update own group_node:notification entity'
+  39: 'view group_node:notification entity'
+  40: 'view unpublished group_node:notification entity'
+  41: 'access group_media overview'
+  42: 'create group_media:audio entity'
+  44: 'delete own group_media:audio entity'
+  45: 'update any group_media:audio entity'
+  46: 'update own group_media:audio entity'
+  47: 'view group_media:audio entity'
+  48: 'view unpublished group_media:audio entity'
+  49: 'create group_media:document entity'
+  51: 'delete own group_media:document entity'
+  52: 'update any group_media:document entity'
+  53: 'update own group_media:document entity'
+  54: 'view group_media:document entity'
+  55: 'view unpublished group_media:document entity'
+  56: 'create group_media:image entity'
+  58: 'delete own group_media:image entity'
+  59: 'update any group_media:image entity'
+  60: 'update own group_media:image entity'
+  61: 'view group_media:image entity'
+  62: 'view unpublished group_media:image entity'
+  63: 'create group_media:video entity'
+  65: 'delete own group_media:video entity'
+  66: 'update any group_media:video entity'
+  67: 'update own group_media:video entity'
+  68: 'view group_media:video entity'
+  69: 'view unpublished group_media:video entity'
